# apix

./: Cargo.toml
crates/apix-cli/: Cargo.toml
crates/apix-cli/src/: cli.rs  config.rs  db.rs  internal_dir.rs  logger.rs  main.rs
crates/apix-cli/src/cli/: cli.rs  mod.rs  prelude.rs
crates/apix-cli/src/cli/commands/: create.rs  init.rs  install.rs  list_plugins.rs  list_projects.rs  mod.rs  rename.rs  update.rs
crates/apix-cli/src/cli/commands/plugin/: create.rs  extend.rs  info.rs  migrate.rs  mod.rs
crates/apix-cli/src/plugin/: dispatcher.rs  helpers.rs  mod.rs
crates/apix-cli/src/utils/: git.rs  internal_dir.rs  mod.rs
crates/apix-core/: Cargo.toml
crates/apix-core/migrations/: 00001_initialize_essentials.sql
crates/apix-core/src/: db.rs  events.rs  lib.rs
crates/apix-core/src/monorepo/: config.rs
crates/apix-core/src/plugin/: abi.rs  bindings.rs  config.rs  ctx.rs  deserialize.rs  file_tree.rs  instance.rs  loader.rs  mod.rs  plan.rs  plugin.rs  utils.rs
crates/apix-core/src/plugin/plugin_ctx/: ask.rs  ctx.rs  files.rs  info.rs  logger.rs  mod.rs  system.rs
crates/apix-core/src/utils/: fs.rs  fs_utils.rs  internal_dir.rs  mod.rs  version.rs
crates/apix-core/templates/: meta.schema.json  meta.yml
my-app/.apix/: state.db
plugins/example-plugin/: example-plugin.lua  plugin.toml
